:sunglasses: done with css and front-end designs :star:

--- a/styles/collections/collections.css
+++ b/styles/collections/collections.css
@@ -1,7 +1,7 @@
 
 
 .collections-wrapper {
-  width: 1230px;
+  width: 1200px;
   min-height: 500px;
   justify-content: flex-start;
   padding: 50px 0 100px 0;
@@ -13,24 +13,19 @@
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 40px;
-  /* background: red; */
-  /* background: rgba(190,190,190,0.5); */
 }
 
-.collections-header h3 {
+.collection-title {
   color: #3D3D3D;
-  font-size: 2.8em;
   font-weight: 500;
   letter-spacing: -0.035em;
   line-height: 1.3em;
-  /* background: red; */
 }
 
 .collection-buttons {
   min-height: 60px;
   flex-direction: row;
   justify-content: flex-start;
-  /* background: rgba(190, 190, 190, 0.1); */
 }
 
 .collection-buttons a{
@@ -41,8 +36,7 @@
   min-width: 50px;
   margin-right: 20px;
   padding: 8px 15px;
-  font-size: 1.08em;
-  border: 2px solid #E9BBA0;
+  border: 1px solid #E9BBA0;
   border-radius: 8px;
   color: #858585;
   transition: all 0.2s ease-in;
@@ -56,7 +50,6 @@
 .collection-images-wrapper {
   margin-top: 15px;
   width: 100%;
-  background: rgba(190,190,190,0.9);
 }
 
 .collection-images {
@@ -67,6 +60,10 @@
   border-radius: 10px;
   background: #E4E4E4;
   transition: all 0.2s ease-in;
+}
+
+.collection-images-wrapper a:last-child div{
+  margin-right: 0px;
 }
 
 .collection-images:hover {
@@ -93,30 +90,155 @@
   border-radius: 8px;
 }
 
-.collection-images h3 {
-  font-size: 2.5em;
+.collection-album {
+  color: #3D3D3D;
+  font-weight: 500;
+  letter-spacing: -0.035em;
   line-height: 1.1em;
 }
 
-/* 
-<div className="collection-images-wrapper">
-  <div className="collection-images">
-    <img src="/images/birthday01.jpg" alt=""/>
-    <img src="/images/birthday02.jpg" alt=""/>
-    <img src="/images/birthday03.jpg" alt=""/>
-    <h3 className='text-1'>Birthdays</h3>
-  </div>
-  <div className="collection-images">
-    <img src="/images/birthday01.jpg" alt=""/>
-    <img src="/images/birthday02.jpg" alt=""/>
-    <img src="/images/birthday03.jpg" alt=""/>
-    <h3 className='text-1'>Birthdays</h3>
-  </div>
-  <div className="collection-images">
-    <img src="/images/birthday01.jpg" alt=""/>
-    <img src="/images/birthday02.jpg" alt=""/>
-    <img src="/images/birthday03.jpg" alt=""/>
-    <h3 className='text-1'>Birthdays</h3>
-  </div>
-</div>
-*/
+
+
+@media (max-width: 1268px){
+  .collections-wrapper {
+    width: 1100px;
+  }
+  .collection-buttons a span {
+    padding: 7px 13px;
+  }
+  .collection-images-wrapper {
+    margin-top: 12px;
+  }
+  .collection-images {
+    margin-right: 25px;
+    width: 327px;
+  }
+}
+
+@media (max-width: 1168px){
+  .collections-wrapper {
+    width: 1000px;
+  }
+  .collection-images {
+    margin-right: 25px;
+    width: 295px;
+  }
+}
+
+@media (max-width: 1068px){
+  .collections-wrapper {
+    width: 900px;
+  }
+  .collection-images {
+    margin-right: 20px;
+    width: 265px;
+  }
+}
+
+@media (max-width: 968px){
+  .collections-wrapper {
+    width: 800px;
+  }
+  .collection-buttons a span {
+    border-radius: 6px;
+  }
+  .collection-images {
+    margin-right: 20px;
+    padding: 5px;
+    width: 242px;
+    border-radius: 8px;
+  }
+  .collection-images img:first-child,
+  .collection-images img:nth-child(2),
+  .collection-images img:nth-child(3) {
+    border-radius: 6px;
+  }
+}
+
+@media (max-width: 868px){
+  .collections-wrapper {
+    width: 100%;
+  }
+  .collection-title {
+    margin-left: 40px;
+  }
+  .collection-buttons {
+    padding-left: 40px;
+  }
+  .collection-images-wrapper {
+    overflow-x: auto;
+    overflow-y: hidden;
+    width: 100%;
+  }
+  .image-scroll {
+    width: 100%;
+    margin: 0 40px;
+    height: 284px;
+    display: flex;
+  }
+  /* width */
+  .collection-images-wrapper::-webkit-scrollbar, .collection-buttons::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+  /* Track */
+  .collection-images-wrapper::-webkit-scrollbar-track,.collection-buttons::-webkit-scrollbar-track {
+    background: #EAEAEA;
+  }
+  /* Handle */
+  .collection-images-wrapper::-webkit-scrollbar-thumb,.collection-buttons::-webkit-scrollbar-thumb {
+    background: #D6D6D6;
+    border-radius: 3px;
+  }
+  /* Handle on hover */
+  .collection-images-wrapper::-webkit-scrollbar-thumb:hover,.collection-buttons::-webkit-scrollbar-thumb:hover {
+    background: #C7C7C7;
+  }
+  .collection-images-wrapper a:last-child div {
+    margin-right: 40px;
+  }
+}
+
+@media (max-width: 768px){
+  .image-scroll {
+    height: 276px;
+  }
+  .collection-images {
+    width: 233px;
+  }
+}
+
+@media (max-width: 668px){
+  .collection-buttons {
+    width: 100%;
+    padding-left: 0px;
+    overflow-x: auto;
+  }
+  .button-scroll {
+    width: 100%;
+    min-height: 20px;
+    margin: 0 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+}
+
+@media (max-width: 568px){
+  .collection-title, .button-scroll, .image-scroll {
+    margin-left: 30px;
+  }
+}
+
+@media (max-width: 468px){
+  .collection-title, .button-scroll {
+    margin-left: 25px;
+  }
+  .image-scroll {
+    margin: 0 25px;
+    height: 261px;
+  }
+  .collection-images {
+    width: 213px;
+  }
+}
