--- a/styles/main/photo.css
+++ b/styles/main/photo.css
@@ -10,24 +10,94 @@
   width: 100%;
   flex-direction: row;
   justify-content: space-between;
-  /* background: rgba(190,190,190,0.5); */
 }
 
 .media-header span{
   letter-spacing: -0.04em;
   color: #3D3D3D;
-  font-size: 0.98em;
   font-style: italic;
 }
 
 
 .media-header h3 {
   color: #3D3D3D;
-  font-size: 2.8em;
   font-weight: 500;
   letter-spacing: -0.035em;
   line-height: 1.5em;
 }
+
+.media-header h3 span {
+  margin-left: 10px;
+  color: #1388A9
+}
+
+.media-header .search-results {
+  color: #1388A9;
+  font-weight: 600;
+}
+
+.search-labels {
+  width: 100%;
+  height: 34px;
+  justify-content: flex-start;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+
+.search-labels button {
+  flex-direction: row;
+  min-width: 50px;
+  padding: 8px 13px;
+  border: none;
+  border: 1px solid #E9BBA0;
+  border-radius: 5px;
+  color: #858585;
+  transition: all 0.2s ease-in;
+}
+
+.search-labels button:hover {
+  cursor: pointer;
+  background: #FAE7DC;
+  transition: all 0.15s ease-in;
+}
+
+.search-labels button:focus {
+  outline: none;
+}
+
+.search-labels button:active {
+  transform: scale(0.8);
+  transition: all 0.15s ease-in;
+ 
+
+}
+
+
+
+.search-labels button:first-child {
+  margin-right: 20px;
+
+}
+
+.search-labels button div{
+  margin-right: 8px;
+}
+
+.search-labels button div, .search-labels button svg {
+  width: 20px;
+  height: 14px;
+}
+
+
+/* 
+<div className="search-labels">
+  <button className='content-center'>
+    <Svg svg='photos'/> Photos</button>
+  <button className='content-center'>
+    <Svg svg='photos'/> Photos</button>
+</div>
+*/
+
 
 .media-outer-wrapper {
   display: flex;
@@ -94,7 +164,6 @@
   margin-left: 20px;
   flex-direction: row;
   text-decoration: none;
-  font-size: 1em;
   font-weight: 600;
   color: #F3B18C;
   letter-spacing: -0.05em;
@@ -135,9 +204,6 @@
   transition: all 0.15s ease-in;
 }
 
-
-
-
 /* load button */
 .load-wrapper {
   width: 100%;
@@ -145,7 +211,6 @@
 }
 
 .load-wrapper button{
-  font-size: 1em;
   font-weight: 600;
   letter-spacing: -0.04em;
   width: 180px;
@@ -172,4 +237,175 @@
   outline: none;
 }
 
+@media (max-width: 1568px){
+  .photo-wrapper {
+    width: 1400px;
+  }
+  .image-wrapper article {
+    width: 457px;
+  }
+}
 
+@media (max-width: 1468px){
+  .photo-wrapper {
+    width: 1300px;
+  }
+  .image-wrapper article {
+    width: 423px;
+  }
+}
+
+@media (max-width: 1368px){
+  .photo-wrapper {
+    width: 1200px;
+  }
+  .image-wrapper article {
+    width: 390px;
+    height: 90px;
+  }
+}
+
+@media (max-width: 1268px){
+  .photo-wrapper {
+    width: 1100px;
+  }
+  .image-wrapper article {
+    width: 357px;
+  }
+}
+
+@media (max-width: 1168px){
+  .photo-wrapper {
+    width: 1000px;
+  }
+  .media-wrapper {
+    margin-right: 12px;
+  }
+  .image-wrapper {
+    margin-bottom: 9px;
+  }
+  .image-wrapper article {
+    width: 325px;
+    height: 80px;
+  }
+}
+
+@media (max-width: 1068px) {
+  .photo-wrapper {
+    width: 900px;
+  }
+  .image-wrapper article {
+    width: 292px;
+    height: 80px;
+  }
+  .media-wrapper article span {
+    margin-left: 10px;
+  }
+  .media-wrapper article img {
+    width: 40px;
+    height: 40px;
+  }
+  .action-wrapper {
+    margin-right: 10px;
+  }
+  .action-wrapper span svg {
+    height: 18px;
+    width: 18px;
+  }
+}
+
+
+@media (max-width: 968px) {
+  .photo-wrapper {
+    width: 800px;
+  }
+  .image-wrapper article {
+    width: 259px;
+    height: 75px;
+  }
+}
+
+@media (max-width: 868px) {
+  .photo-wrapper {
+    width: 700px;
+  }
+  .image-wrapper article {
+    width: 343px;
+    height: 70px;
+  }
+  .media-wrapper article img {
+    width: 35px;
+    height: 35px;
+  }
+  .action-wrapper span svg {
+    height: 15px;
+    width: 14px;
+  }
+}
+
+@media (max-width: 768px) {
+  .photo-wrapper {
+    width: 600px;
+  }
+  .image-wrapper article {
+    width: 294px;
+  }
+}
+
+@media (max-width: 668px) {
+  .photo-wrapper {
+    width: 500px;
+  }
+  .image-wrapper article {
+    width: 244px;
+  }
+}
+
+@media (max-width: 568px) {
+  .photo-wrapper, .image-wrapper article {
+    width: 480px;
+  }
+}
+
+@media (max-width: 528px) {
+  .photo-wrapper, .image-wrapper article {
+    width: 440px;
+  }
+}
+
+@media (max-width: 488px) {
+  .photo-wrapper, .image-wrapper article {
+    width: 400px;
+  }
+}
+
+@media (max-width: 448px) {
+  .photo-wrapper, .image-wrapper article {
+    width: 380px;
+  }
+}
+
+@media (max-width: 408px) {
+  .photo-wrapper, .image-wrapper article {
+    width: 340px;
+  }
+  .media-header {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    height: 90px;
+    padding-bottom: 10px;
+  }
+}
+
+@media (max-width: 368px) {
+  .photo-wrapper, .image-wrapper article {
+    width: 300px;
+  }
+}
+
+@media (max-width: 328px) {
+  .photo-wrapper, .image-wrapper article {
+    width: 260px;
+  }
+}
