--- a/styles/photo/photo.css
+++ b/styles/photo/photo.css
@@ -2,7 +2,6 @@
 .ind-photo-wrapper {
   width: 600px;
   min-height: 400px;
-  /* background: rgba(190,190,190,0.1); */
   padding: 40px 0 40px 0;
 }
 
@@ -28,13 +27,11 @@
 }
 
 .name {
-  font-size: 0.95em;
   font-weight: 600;
   color: #767676
 }
 
 .title {
-  font-size: 0.9em;
   color: #FC8846
 }
 
@@ -57,13 +54,17 @@
 .add-favorites span {
   letter-spacing: -0.03em;
   color: #767676;
-  font-size: 0.95em;
   font-weight: 600;
   transition: all 0.2s ease-in;
 }
 
 .add-favorites:hover {
   cursor: pointer;
+}
+
+.add-favorites:active {
+  transform: scale(0.8);
+  transition: all 0.2s ease-in;
 }
 
 .add-favorites:hover span {
@@ -77,7 +78,7 @@
 
 .photo-tags {
   margin: 18px 0;
-  width: 480px;
+  width: 100%;
   color: #525252;
   text-align: center;
   letter-spacing: -0.03em;
@@ -85,7 +86,6 @@
 
 .photo-tags span{
   color: teal;
-  font-size: 1em;
   font-weight: 600;
 }
 
@@ -97,7 +97,6 @@
 
 
 .ind-photo-download button {
-  font-size: 1em;
   font-weight: 600;
   letter-spacing: -0.04em;
   width: 180px;
@@ -124,12 +123,79 @@
 .ind-photo-download button:focus {
   outline: none;
 }
-/* 
-<div className="content-center photo-download">
-  <img src="/images/p1.jpg" alt=""/>
-  <div className="photo-tags">
-    Photo tags: <span>floral violet dark and gray</span>
-  </div>
-  <button>Download Photo</button>
-</div>
-*/
+
+@media (max-width: 1268px){
+  .ind-photo-wrapper {
+    width: 550px;
+  }
+  .photo-tags {
+    width: 100%;
+  }
+  .ind-photo-download img{
+    width: 450px;
+  }
+}
+
+@media (max-width: 1068px){
+  .ind-photo-wrapper {
+    width: 500px;
+    min-height: 300px;
+  }
+  .ind-photo-desc {
+    height: 65px;
+  }
+  .artist img {
+    width: 44px;
+  }
+  .photo-tags {
+    width: 100%;
+  }
+  .ind-photo-download img{
+    width: 420px;
+  }
+}
+
+@media (max-width: 868px){
+  .ind-photo-wrapper {
+    width: 440px;
+  }
+  .artist img {
+    width: 40px;
+  }
+  .ind-photo-download img{
+    width: 380px;
+  }
+}
+
+@media (max-width: 668px){
+  .ind-photo-wrapper {
+    width: 400px;
+  }
+  .ind-photo-download img{
+    width: 340px;
+  }
+}
+
+@media (max-width: 468px){
+  .ind-photo-wrapper {
+    width: 100%;
+  }
+  .artist {
+    margin-left: 18px;
+  }
+  .artist-detail {
+    margin-left: 5px;
+  }
+  .add-favorites {
+    margin-right: 18px;
+  }
+  .add-favorites svg {
+    margin-right: 3px;
+  }
+  .photo-tags {
+    width: calc(100% - 36px);
+  }
+  .ind-photo-download img{
+    width: calc(100% - 36px);
+  }
+}
