:star: added page and api routes :sunglasses:

--- a/styles/headers/mid-header.css
+++ b/styles/headers/mid-header.css
@@ -20,6 +20,12 @@
   text-decoration: none;
   color: #818181;
   width: 80px;
+  transition: all 0.15s ease-in;
+}
+
+.mid-header-menu a:hover {
+  color: #EF9461;
+  transition: all 0.15s ease-in;
 }
 
 .mid-header-menu a:active {
