--- a/styles/headers/top-header.css
+++ b/styles/headers/top-header.css
@@ -67,7 +67,7 @@
 
 .photo-by span{
   float: right;  
-  color: #B8B8B8;
+  color: #D7D7D7;
   margin: 0 30px 14px 0;
   letter-spacing: -0.03em;
 }
