--- a/styles/headers/topnav.css
+++ b/styles/headers/topnav.css
@@ -11,7 +11,7 @@
   z-index: 200;
   position: absolute;
   justify-content: space-between;
-  background: rgba(6,39,57,1);
+  /* background: rgba(6,39,57,1); */
 }
 
 .top-nav-left {
