--- a/styles/main/photo.css
+++ b/styles/main/photo.css
@@ -100,7 +100,10 @@
 
 
 .media-outer-wrapper {
+  overflow: hidden;
   display: flex;
+  overflow-anchor: none;
+
 }
 
 .media-wrapper {
@@ -140,11 +143,33 @@
 }
 
 .image-details {
-  position: absolute;
+  position: relative;
+
+  /* justify-content: flex-start; */
+
   z-index: 100;
   opacity: 0;
   transition: all 0.45s ease-in;
 }
+
+
+
+.fade-div{
+  width: 100%;
+  height: 5px;
+  /* background: red; */
+  position: relative;
+  /* top: 0px; */
+}
+
+.fade-element {
+  width: 100%;
+  height: 85px;
+  position: relative;
+  top: -80px;
+  background: linear-gradient(180deg, rgba(244, 244, 244, 0) 0%, rgba(244, 244, 244, 0.395833) 29.69%, rgba(244, 244, 244, 0.807562) 65.1%, #F4F4F4 100%);
+}
+
 
 .image-wrapper:hover .image-details{
   opacity: 1;
@@ -167,6 +192,10 @@
   font-weight: 600;
   color: #F3B18C;
   letter-spacing: -0.05em;
+}
+
+.image-details article {
+  position: absolute;
 }
 
 .media-wrapper article span:hover {
