--- a/styles/footer/footer.css
+++ b/styles/footer/footer.css
@@ -25,9 +25,9 @@ footer {
   margin-left: 100px
 }
 
-.footer-top-icons span:first-child svg{
+.footer-top-icons span:first-child img{
   width: 156px;
-  height: 35px;
+  height: 31px;
   transition: all 0.2s ease-in;
 }
 
@@ -47,7 +47,7 @@ footer {
 }
 
 .footer-top-icons span:nth-child(2) img:active, 
-.footer-top-icons span:first-child svg:active{
+.footer-top-icons span:first-child img:active{
   transform: scale(0.8);
   transition: all 0.2s ease-in;
 }
@@ -62,9 +62,9 @@ footer {
   .footer-top-icons {
     height: 85px;
   }
-  .footer-top-icons span:first-child svg {
+  .footer-top-icons span:first-child img {
     width: 142px;
-    height: 32px;
+    height: 28px;
   }
   .footer-top-icons span:nth-child(2) img {
     width: 35px;
@@ -78,9 +78,9 @@ footer {
   .footer-top-icons span:first-child {
     margin-left: 70px
   }
-  .footer-top-icons span:first-child svg {
+  .footer-top-icons span:first-child img {
     width: 137px;
-    height: 30px;
+    height: 27px;
   }
   .footer-top-icons span:nth-child(2) {
     margin-right: 70px;
@@ -103,9 +103,9 @@ footer {
   .footer-top-icons span:first-child {
     margin-left: 40px
   }
-  .footer-top-icons span:first-child svg {
+  .footer-top-icons span:first-child img {
     width: 137px;
-    height: 30px;
+    height: 27px;
   }
   .footer-top-icons span:nth-child(2) {
     margin-right: 40px;
@@ -125,9 +125,9 @@ footer {
   .footer-top-icons span:first-child {
     margin-left: 30px
   }
-  .footer-top-icons span:first-child svg {
+  .footer-top-icons span:first-child img {
     width: 125px;
-    height: 28px;
+    height: 25px;
   }
   .footer-top-icons span:nth-child(2) {
     margin-right: 30px;
@@ -154,9 +154,9 @@ footer {
     margin-bottom: 18px;
     margin-left: 40px
   }
-  .footer-top-icons span:first-child svg {
+  .footer-top-icons span:first-child img {
     width: 125px;
-    height: 28px;
+    height: 25px;
   }
   .footer-top-icons span:nth-child(2) {
     margin-left: 40px;
