--- a/styles/intro/intro.css
+++ b/styles/intro/intro.css
@@ -2,12 +2,14 @@
 .intro {
   width: 100%;
   height: 100vh;
+  z-index: 600;
   background: #0D3C55;
   position: fixed;
   left: 0;
   top: 0;
   justify-content: space-between;
   color: #E9B89A;
+  overflow: hidden;
   font-weight: 600;
   letter-spacing: -0.04em;
 }
@@ -19,16 +21,17 @@
 }
 
 .intro .logo span {
-  font-size: 1.1em;
+  font-size: 1em;
 }
 
 .intro .logo .loading {
   margin-top: 15px;
-  font-size: 1em;
+  font-size: 0.82em;
 }
 
 .intro .copy-right {
-  margin-bottom: 25px
+  margin-bottom: 25px;
+  font-size: 0.85em;
 }
 
 @media (max-width: 968px) {
